--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <link rel="stylesheet" href="pages/index.css">
     </head>
     <body class="page">
-        <header class="header"></header>
+        <header class="header">
+            <img class="header__logo" src="./images/logo.svg" alt="Логотип Место">
+        </header>
         <main class="content"></main>
         <footer class="footer"></footer>   
     </body>
