--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
         <header class="header">
             <img class="header__logo" src="./images/logo.svg" alt="Логотип Место">
         </header>
-        <main class="content"></main>
+        <main class="content">
+            <section class="profile">
+                <img class="avatar" src="./images/Avatar.svg" alt="Фото профиля">
+                <div class="profile__info">
+                    <h1 class="profile__title">Жак-Ив Кусто</h1>
+                    <button class="profile__button-edit"></button>
+                    <p class="profile__subtitle">Исследователь океана</p>
+                </div>
+                <button class="profile__button-add"></button>
+            </section>
+        </main>
         <footer class="footer"></footer>   
     </body>
