--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 </div>
                 <button class="profile__button-add"></button>
             </section>
+            <section class=""></section>
         </main>
-        <footer class="footer"></footer>   
+        <footer class="footer">
+            <p class="footer__copyright">&copy; 2023. Mesto Russia</p>
+        </footer>   
     </body>
