--- a/index.html
+++ b/index.html
@@ -20,7 +20,52 @@
                 </div>
                 <button class="profile__button-add"></button>
             </section>
-            <section class=""></section>
+            <section class="photos">
+                <ul class="elements">
+                    <li class="element">
+                        <img class="photo" src="./images/Ингушетия.jpeg" alt="Гора на рассвете">
+                        <div class="photo__info">
+                            <p class="photo__description">Ингушетия</p>
+                            <button class="photo__like"></button>
+                        </div>
+                    </li>
+                    <li class="element">
+                        <img class="photo" src="./images/Иркутск.jpeg" alt="Ледяной узор">
+                        <div class="photo__info">
+                            <p class="photo__description">Иркутск</p>
+                            <button class="photo__like"></button>
+                        </div>
+                    </li>
+                    <li class="element">
+                        <img class="photo" src="./images/Мурманск.jpeg" alt="Река с высоты полёта">
+                        <div class="photo__info">
+                            <p class="photo__description">Мурманск</p>
+                            <button class="photo__like"></button>
+                        </div>
+                    </li>
+                    <li class="element">
+                        <img class="photo" src="./images/Ольхон.jpeg" alt="Скала на закате">
+                        <div class="photo__info">
+                            <p class="photo__description">Ольхон</p>
+                            <button class="photo__like"></button>
+                        </div>
+                    </li>
+                    <li class="element">
+                        <img class="photo" src="./images/Тула.jpeg" alt="Карьеры под водой">
+                        <div class="photo__info">
+                            <p class="photo__description">Тульская область</p>
+                            <button class="photo__like"></button>
+                        </div>
+                    </li>
+                    <li class="element">
+                        <img class="photo" src="./images/Ялта.jpeg" alt="Туманный лес">
+                        <div class="photo__info">
+                            <p class="photo__description">Ялта</p>
+                            <button class="photo__like"></button>
+                        </div>
+                    </li>
+                </ul>
+            </section>
         </main>
         <footer class="footer">
             <p class="footer__copyright">&copy; 2023. Mesto Russia</p>
