--- a/index.html
+++ b/index.html
@@ -67,7 +67,20 @@
                 </ul>
             </section>
         </main>
+        <div class="popup">
+            <div class="popup__container">
+                <h2 class="popup__title">Редактировать профиль</h2>
+                <button class="popup__close-button">Close</button>
+                <form class="popup__form" action="">
+                    <input class="popup__form_name" type="text">
+                    <input class="popup__form_about" type="text">
+                    <button class="popup__form_save-button" type="submit">Сохранить</button>
+                </form>
+            </div>
+        </div>   
         <footer class="footer">
             <p class="footer__copyright">&copy; 2023. Mesto Russia</p>
-        </footer>   
+        </footer>
+        <script type="text/javascript" src="index.js"></script>
     </body>
+</html>
