--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <section class="profile">
                 <img class="avatar" src="./images/Avatar.svg" alt="Фото профиля">
                 <div class="profile__info">
-                    <h1 class="profile__title">Жак-Ив Кусто</h1>
+                    <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <button class="profile__button-edit"></button>
-                    <p class="profile__subtitle">Исследователь океана</p>
+                    <p class="profile__about">Исследователь океана</p>
                 </div>
                 <button class="profile__button-add"></button>
             </section>
@@ -70,16 +70,16 @@
         <div class="popup">
             <div class="popup__container">
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <button class="popup__close-button">Close</button>
+                <button class="popup__close-button"></button>
                 <form class="popup__form" action="">
-                    <input class="popup__form_name" type="text">
-                    <input class="popup__form_about" type="text">
-                    <button class="popup__form_save-button" type="submit">Сохранить</button>
+                    <input class="popup__form popup__text popup__form_name" type="text" name="name" placeholder="Ваше имя">
+                    <input class="popup__form popup__text popup__form_about" type="text" name="about" placeholder="О себе">
+                    <button class="popup__save-button" type="submit">Сохранить</button>
                 </form>
             </div>
         </div>   
         <footer class="footer">
-            <p class="footer__copyright">&copy; 2023. Mesto Russia</p>
+            <p class="footer__copyright">&copy; 2023. Дарья Жигалко</p>
         </footer>
         <script type="text/javascript" src="index.js"></script>
     </body>
