once again done

--- a/index.html
+++ b/index.html
@@ -22,45 +22,45 @@
             </section>
             <section class="photos">
                 <ul class="elements">
-                    <li class="element"> 
-                        <img class="photo" src="./images/Ингушетия.jpeg" alt="Гора на рассвете">
+                    <li class="photo"> 
+                        <img class="photo__item" src="./images/Ингушетия.jpeg" alt="Гора на рассвете">
                         <div class="photo__info">
-                            <p class="photo__description">Ингушетия</p>
+                            <h3 class="photo__description">Ингушетия</h3>
                             <button class="photo__like"></button>
                         </div>
                     </li>
-                    <li class="element">
-                        <img class="photo" src="./images/Иркутск.jpeg" alt="Ледяной узор">
+                    <li class="photo">
+                        <img class="photo__item" src="./images/Иркутск.jpeg" alt="Ледяной узор">
                         <div class="photo__info">
-                            <p class="photo__description">Иркутск</p>
+                            <h3 class="photo__description">Иркутск</h3>
                             <button class="photo__like"></button>
                         </div>
                     </li>
-                    <li class="element">
-                        <img class="photo" src="./images/Мурманск.jpeg" alt="Река с высоты полёта">
+                    <li class="photo">
+                        <img class="photo__item" src="./images/Мурманск.jpeg" alt="Река с высоты полёта">
                         <div class="photo__info">
-                            <p class="photo__description">Мурманск</p>
+                            <h3 class="photo__description">Мурманск</h3>
                             <button class="photo__like"></button>
                         </div>
                     </li>
-                    <li class="element">
-                        <img class="photo" src="./images/Ольхон.jpeg" alt="Скала на закате">
+                    <li class="photo">
+                        <img class="photo__item" src="./images/Ольхон.jpeg" alt="Скала на закате">
                         <div class="photo__info">
-                            <p class="photo__description">Ольхон</p>
+                            <h3 class="photo__description">Ольхон</h3>
                             <button class="photo__like"></button>
                         </div>
                     </li>
-                    <li class="element">
-                        <img class="photo" src="./images/Тула.jpeg" alt="Карьеры под водой">
+                    <li class="photo">
+                        <img class="photo__item" src="./images/Тула.jpeg" alt="Карьеры под водой">
                         <div class="photo__info">
-                            <p class="photo__description">Тульская область</p>
+                            <h3 class="photo__description">Тульская область</h3>
                             <button class="photo__like"></button>
                         </div>
                     </li>
-                    <li class="element">
-                        <img class="photo" src="./images/Ялта.jpeg" alt="Туманный лес">
+                    <li class="photo">
+                        <img class="photo__item" src="./images/Ялта.jpeg" alt="Туманный лес">
                         <div class="photo__info">
-                            <p class="photo__description">Ялта</p>
+                            <h3 class="photo__description">Ялта</h3>
                             <button class="photo__like"></button>
                         </div>
                     </li>
@@ -71,7 +71,7 @@
             <div class="popup__container">
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <button class="popup__close-button"></button>
-                <form class="popup__form" action="">
+                <form class="popup__form">
                     <input class="popup__form popup__text popup__form_name" type="text" name="name" placeholder="Ваше имя">
                     <input class="popup__form popup__text popup__form_about" type="text" name="about" placeholder="О себе">
                     <button class="popup__save-button" type="submit">Сохранить</button>
@@ -81,6 +81,6 @@
         <footer class="footer">
             <p class="footer__copyright">&copy; 2023. Дарья Жигалко</p>
         </footer>
-        <script type="text/javascript" src="index.js"></script>
+        <script src="./index.js"></script>
     </body>
 </html>
