--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <button class="profile__button-add" type="button" aria-label="Добавить"></button>
             </section>
             <section class="photos">
-                <ul class="photo-grid">
+                <ul class="photos__list">
                     <li class="photo"> 
                         <img class="photo__item" src="./images/Ингушетия.jpeg" alt="Гора на рассвете">
                         <div class="photo__info">
