trash button done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </header>
         <main class="content">
             <section class="profile">
-                <img class="avatar" src="./images/Avatar.svg" alt="Фото профиля">
+                <img class="avatar" src="./images/avatar.svg" alt="Фото профиля">
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <button class="profile__button-edit" type="button" aria-label="Редактировать"></button>
@@ -23,42 +23,43 @@
             <section class="photos">
                 <ul class="photos__list">
                     <li class="photo"> 
-                        <img class="photo__item" src="./images/Ингушетия.jpeg" alt="Гора на рассвете">
+                        <button class="photo__trash" type="button" aria-label="Удалить фото"></button>
+                        <img class="photo__item" src="./images/ингушетия.jpeg" alt="Гора на рассвете">
                         <div class="photo__info">
                             <h3 class="photo__description">Ингушетия</h3>
                             <button class="photo__like" type="button" aria-label="Лайк"></button>
                         </div>
                     </li>
                     <li class="photo">
-                        <img class="photo__item" src="./images/Иркутск.jpeg" alt="Ледяной узор">
+                        <img class="photo__item" src="./images/иркутск.jpeg" alt="Ледяной узор">
                         <div class="photo__info">
                             <h3 class="photo__description">Иркутск</h3>
                             <button class="photo__like" type="button" aria-label="Лайк"></button>
                         </div>
                     </li>
                     <li class="photo">
-                        <img class="photo__item" src="./images/Мурманск.jpeg" alt="Река с высоты полёта">
+                        <img class="photo__item" src="./images/мурманск.jpeg" alt="Река с высоты полёта">
                         <div class="photo__info">
                             <h3 class="photo__description">Мурманск</h3>
                             <button class="photo__like" type="button" aria-label="Лайк"></button>
                         </div>
                     </li>
                     <li class="photo">
-                        <img class="photo__item" src="./images/Ольхон.jpeg" alt="Скала на закате">
+                        <img class="photo__item" src="./images/ольхон.jpeg" alt="Скала на закате">
                         <div class="photo__info">
                             <h3 class="photo__description">Ольхон</h3>
                             <button class="photo__like" type="button" aria-label="Лайк"></button>
                         </div>
                     </li>
                     <li class="photo">
-                        <img class="photo__item" src="./images/Тула.jpeg" alt="Карьеры под водой">
+                        <img class="photo__item" src="./images/тула.jpeg" alt="Карьеры под водой">
                         <div class="photo__info">
                             <h3 class="photo__description">Тульская область</h3>
                             <button class="photo__like" type="button" aria-label="Лайк"></button>
                         </div>
                     </li>
                     <li class="photo">
-                        <img class="photo__item" src="./images/Ялта.jpeg" alt="Туманный лес">
+                        <img class="photo__item" src="./images/ялта.jpeg" alt="Туманный лес">
                         <div class="photo__info">
                             <h3 class="photo__description">Ялта</h3>
                             <button class="photo__like" type="button" aria-label="Лайк"></button>
