--- a/index.html
+++ b/index.html
@@ -21,46 +21,44 @@
                 <button class="profile__button-add" type="button" aria-label="Добавить"></button>
             </section>
             <section class="photos">
-                <div id="photos__list">
-                    <template id="photo__template"> 
-                        <div class="photo">
-                            <button class="photo__trash" type="button" aria-label="Удалить фото"></button>
-                            <img class="photo__item" src="" alt="">
-                            <div class="photo__info">
-                                <h3 class="photo__description"></h3>
-                                <button class="photo__like" type="button" aria-label="Лайк"></button>
-                            </div>
+                <template id="photo__template"> 
+                    <div class="photo">
+                        <button class="photo__trash" type="button" aria-label="Удалить фото"></button>
+                        <img class="photo__item" src="" alt="">
+                        <div class="photo__info">
+                            <h3 class="photo__description"></h3>
+                            <button class="photo__like" type="button" aria-label="Лайк"></button>
                         </div>
-                    </template>                   
-                </div>
+                    </div>
+                </template>
             </section>
         </main>
-        <div class="popup popup__profile">
+        <div class="popup popup_type_profile">
             <div class="popup__container">
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
-                <form class="popup__form popup__profile__form" name="profile-form">
+                <form class="popup__form popup__profile-form" name="profile-form">
                     <input class="popup__text popup__text_type_name" type="text" name="name" placeholder="Ваше имя">
                     <input class="popup__text popup__text_type_about" type="text" name="about" placeholder="О себе">
                     <button class="popup__save-button" type="submit" aria-label="Сохранить">Сохранить</button>
                 </form>
             </div>
         </div>
-        <div class="popup popup__add-photo">
+        <div class="popup popup_type_add-photo">
             <div class="popup__container">
                 <h2 class="popup__title">Новое место</h2>
                 <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
-                <form class="popup__form popup__add-photo__form" name="add-photo">
+                <form class="popup__form popup__add-photo-form" name="add-photo">
                     <input class="popup__text popup__text_type_place" type="text" name="place" placeholder="Название">
                     <input class="popup__text popup__text_type_link" type="url" name="link" placeholder="Ссылка на картинку">
                     <button class="popup__save-button" type="submit" aria-label="Сохранить">Сохранить</button>
                 </form>
             </div>
         </div>
-        <div class="popup popup__image-full">
+        <div class="popup popup_type_image-full">
             <figure class="popup__image-container">
                 <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
-                <img class="popup__image" src="" alt="">
+                <img class="popup__image" src="#" alt="#">
                 <figcaption class="popup__image-name"></figcaption>
             </figure>
         </div>
