--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <template id="photo__template"> 
                     <div class="photo">
                         <button class="photo__trash" type="button" aria-label="Удалить фото"></button>
-                        <img class="photo__item" src="" alt="">
+                        <img class="photo__item" src="#" alt="#">
                         <div class="photo__info">
                             <h3 class="photo__description"></h3>
                             <button class="photo__like" type="button" aria-label="Лайк"></button>
