--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </header>
         <main class="content">
             <section class="profile">
-                <img class="avatar" src="./images/avatar.svg" alt="Фото профиля">
+                <img class="avatar" src="./images/ava.svg" alt="Фото профиля">
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <button class="profile__button-edit" type="button" aria-label="Редактировать"></button>
