vadationConfig, overlay, button disabled

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <div class="popup__container">
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <button class="popup__close-button popup__close-button_type_profile" type="button" aria-label="Закрыть"></button>
-                <form class="popup__form popup__profile-form" name="profile-form">
-                    <input class="popup__text popup__text_type_name" type="text" name="name" placeholder="Ваше имя">
-                    <input class="popup__text popup__text_type_about" type="text" name="about" placeholder="О себе">
-                    <button class="popup__save-button" type="submit" aria-label="Сохранить">Сохранить</button>
+                <form class="popup__form popup__profile-form" name="profile">
+                    <input name="name" class="popup__input" type="text" placeholder="Ваше имя">
+                    <input name="about" class="popup__input" type="text" placeholder="О себе">
+                    <button class="popup__button popup__button_disabled" type="submit" aria-label="Сохранить" disabled>Сохранить</button>
                 </form>
             </div>
         </div>
@@ -48,10 +48,10 @@
             <div class="popup__container">
                 <h2 class="popup__title">Новое место</h2>
                 <button class="popup__close-button popup__close-button_type_add-photo" type="button" aria-label="Закрыть"></button>
-                <form class="popup__form popup__add-photo-form" name="add-photo">
-                    <input class="popup__text popup__text_type_place" type="text" name="place" placeholder="Название">
-                    <input class="popup__text popup__text_type_link" type="url" name="link" placeholder="Ссылка на картинку">
-                    <button class="popup__save-button" type="submit" aria-label="Сохранить">Сохранить</button>
+                <form class="popup__form popup__add-photo-form" name="photo">
+                    <input name="place-title" class="popup__input" placeholder="Название">
+                    <input name="link" class="popup__input" type="url" placeholder="Ссылка на картинку">
+                    <button class="popup__button" type="submit" aria-label="Сохранить" disabled>Сохранить</button>
                 </form>
             </div>
         </div>
@@ -67,5 +67,6 @@
         </footer>
         <script src="./scripts/constants.js"></script>
         <script src="./scripts/index.js"></script>
+        <script src="./scripts/validate.js"></script>
     </body>
 </html>
