--- a/index.html
+++ b/index.html
@@ -37,10 +37,26 @@
             <div class="popup__container">
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <button class="popup__close-button popup__close-button_type_profile" type="button" aria-label="Закрыть"></button>
-                <form class="popup__form popup__profile-form" name="profile">
-                    <input name="name" class="popup__input" type="text" placeholder="Ваше имя">
-                    <input name="about" class="popup__input" type="text" placeholder="О себе">
-                    <button class="popup__button popup__button_disabled" type="submit" aria-label="Сохранить" disabled>Сохранить</button>
+                <form class="popup__form popup__profile-form" name="profile" novalidate>
+                    <input
+                    required
+                    name="name"
+                    class="popup__input"
+                    type="text"
+                    placeholder="Ваше имя"
+                    minlength="2"
+                    maxlength="40">
+                    <span class="popup__error" id="name-error"></span>
+                    <input
+                    required
+                    name="about"
+                    class="popup__input"
+                    type="text"
+                    placeholder="О себе"
+                    minlength="2"
+                    maxlength="200">
+                    <span class="popup__error" id="about-error"></span>
+                    <button disabled class="popup__button popup__button_disabled" type="submit" aria-label="Сохранить">Сохранить</button>
                 </form>
             </div>
         </div>
@@ -48,10 +64,24 @@
             <div class="popup__container">
                 <h2 class="popup__title">Новое место</h2>
                 <button class="popup__close-button popup__close-button_type_add-photo" type="button" aria-label="Закрыть"></button>
-                <form class="popup__form popup__add-photo-form" name="photo">
-                    <input name="place-title" class="popup__input" placeholder="Название">
-                    <input name="link" class="popup__input" type="url" placeholder="Ссылка на картинку">
-                    <button class="popup__button" type="submit" aria-label="Сохранить" disabled>Сохранить</button>
+                <form class="popup__form popup__add-photo-form" name="photo" novalidate>
+                    <input
+                    required
+                    name="place-title"
+                    class="popup__input"
+                    type="text"
+                    placeholder="Название"
+                    minlength="2"
+                    maxlength="30">
+                    <span class="popup__error" id="place-title-error"></span>
+                    <input
+                    required
+                    name="link"
+                    class="popup__input"
+                    type="url"
+                    placeholder="Ссылка на картинку">
+                    <span class="popup__error" id="link-error"></span>
+                    <button disabled class="popup__button" type="submit" aria-label="Сохранить">Сохранить</button>    
                 </form>
             </div>
         </div>
@@ -66,7 +96,7 @@
             <p class="footer__copyright">&copy; 2023. Дарья Жигалко</p>
         </footer>
         <script src="./scripts/constants.js"></script>
-        <script src="./scripts/index.js"></script>
         <script src="./scripts/validate.js"></script>
+        <script src="./scripts/index.js"></script>
     </body>
 </html>
