--- a/index.html
+++ b/index.html
@@ -95,8 +95,6 @@
         <footer class="footer">
             <p class="footer__copyright">&copy; 2023. Дарья Жигалко</p>
         </footer>
-        <script src="./scripts/validate.js"></script>
-        <script src="./scripts/constants.js"></script>
-        <script src="./scripts/index.js"></script>
+        <script type="module" src="./scripts/index.js"></script>
     </body>
 </html>
