--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Место</title>
-        <link rel="stylesheet" href="pages/index.css">
     </head>
     <body class="page">
         <header class="header">
-            <img class="header__logo" src="./images/logo.svg" alt="Логотип Место">
+            <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Логотип Место">
         </header>
         <main class="content">
             <section class="profile">
-                <img class="avatar" src="./images/ava.svg" alt="Фото профиля">
+                <img class="avatar" src="<%=require('./images/ava.svg')%>" alt="Фото профиля">
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <button class="profile__button-edit" type="button" aria-label="Редактировать"></button>
@@ -67,13 +66,13 @@
                 <form class="popup__form popup__add-photo-form" name="photo" novalidate>
                     <input
                     required
-                    name="place-title"
+                    name="place"
                     class="popup__input"
                     type="text"
                     placeholder="Название"
                     minlength="2"
                     maxlength="30">
-                    <span class="popup__error" id="place-title-error"></span>
+                    <span class="popup__error" id="place-error"></span>
                     <input
                     required
                     name="link"
@@ -95,6 +94,5 @@
         <footer class="footer">
             <p class="footer__copyright">&copy; 2023. Дарья Жигалко</p>
         </footer>
-        <script type="module" src="./scripts/index.js"></script>
     </body>
 </html>
