--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
                     placeholder="Ваше имя"
                     minlength="2"
                     maxlength="40">
-                    <span class="popup__error" id="name-error"></span>
+                    <span class="popup__error" name="name-error"></span>
                     <input
                     required
                     name="about"
@@ -59,7 +59,7 @@
                     placeholder="О себе"
                     minlength="2"
                     maxlength="200">
-                    <span class="popup__error" id="about-error"></span>    
+                    <span class="popup__error" name="about-error"></span>    
                     <button disabled class="popup__button popup__button_disabled" type="submit" aria-label="Сохранить">Сохранить</button>
                 </form>
             </div>
@@ -77,14 +77,14 @@
                     placeholder="Название"
                     minlength="2"
                     maxlength="30">
-                    <span class="popup__error" id="name-error"></span>
+                    <span class="popup__error" name="name-error"></span>
                     <input
                     required
                     name="link"
                     class="popup__input"
                     type="url"
                     placeholder="Ссылка на картинку">
-                    <span class="popup__error" id="link-error"></span>
+                    <span class="popup__error" name="link-error"></span>
                     <button disabled class="popup__button popup__button_disabled" type="submit" aria-label="Сохранить">Сохранить</button>    
                 </form>
             </div>
@@ -107,7 +107,7 @@
                     class="popup__input"
                     type="url"
                     placeholder="Ссылка на картинку">
-                    <span class="popup__error" id="avatar-error"></span>
+                    <span class="popup__error" name="avatar-error"></span>
                     <button disabled class="popup__button popup__button_disabled" type="submit" aria-label="Сохранить">Сохранить</button>    
                 </form>
             </div>
